form-table overflow issue fixed

--- a/Web.Upnp.Control/ClientApp/src/styles/form-table-component.scss
+++ b/Web.Upnp.Control/ClientApp/src/styles/form-table-component.scss
@@ -2,25 +2,26 @@
 
 .form-table {
     @extend .d-table;
-    overflow: hidden;
 
     & > * {
         @extend .d-table-row;
 
         & > * {
             @extend .d-table-cell;
+            @extend .d-table-row;
 
             &:nth-child(1) {
                 text-align: right;
                 padding-right: 0.5rem;
                 white-space: nowrap !important;
-
                 &::after {
                     content: ':';
                 }
             }
 
             &:nth-child(2) {
+                max-width: 0;
+                width: 100%;
                 @include text-truncate;
             }
         }
